force-app/main/default/objects/Account/fields/SHS_Duns__c.field-meta.xml
<CustomField>
    <fullName>SHS_Duns__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>D-U-N-S Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>