force-app/main/default/objects/Account/fields/SHS_Email_address__c.field-meta.xml
<CustomField>
    <fullName>SHS_Email_address__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>