force-app/main/default/objects/Account/fields/SHS_Fax_number__c.field-meta.xml
<CustomField>
    <fullName>SHS_Fax_number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>