force-app/main/default/objects/Account/fields/SHS_First_telephone_number__c.field-meta.xml
<CustomField>
    <fullName>SHS_First_telephone_number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Telephone Number</label>
    <type>Phone</type>
</CustomField>