force-app/main/default/objects/Account/fields/SHS_Government_classification__c.field-meta.xml
<CustomField>
    <fullName>SHS_Government_classification__c</fullName>
    <label>Government Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>County</fullName>
            </value>
            <value>
                <fullName>State or Province</fullName>
            </value>
            <value>
                <fullName>City/County</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Legacy 11</fullName>
            </value>
            <value>
                <fullName>Legacy 21</fullName>
            </value>
            <value>
                <fullName>Legacy 23</fullName>
            </value>
            <value>
                <fullName>Legacy 24</fullName>
            </value>
            <value>
                <fullName>Legacy 27</fullName>
            </value>
            <value>
                <fullName>Legacy 32</fullName>
            </value>
            <value>
                <fullName>Legacy 33</fullName>
            </value>
            <value>
                <fullName>Legacy 35</fullName>
            </value>
            <value>
                <fullName>Legacy 36</fullName>
            </value>
            <value>
                <fullName>Legacy 39</fullName>
            </value>
            <value>
                <fullName>Legacy 50</fullName>
            </value>
            <value>
                <fullName>Legacy 51</fullName>
            </value>
            <value>
                <fullName>Legacy 52</fullName>
            </value>
            <value>
                <fullName>Legacy 81</fullName>
            </value>
            <value>
                <fullName>Legacy 82</fullName>
            </value>
            <value>
                <fullName>Legacy 88</fullName>
            </value>
            <value>
                <fullName>Legacy NG</fullName>
            </value>
            <value>
                <fullName>Legacy NF</fullName>
            </value>
            <value>
                <fullName>Legacy AE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>