force-app/main/default/objects/Account/fields/SHS_Governmental_customer_indicator__c.field-meta.xml
<CustomField>
    <fullName>SHS_Governmental_customer_indicator__c</fullName>
    <inlineHelpText>A Governmental entity is any corporation, company or other entity directly or indirectly affiliated, generally by government ownership or control, with federal, state, provincial or similar government.

Classification of customer (blank, G (Governmental business), NG (Non-Governmental business))</inlineHelpText>
    <label>Governmental Customer Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>