force-app/main/default/objects/Account/fields/SHS_Gp_nr__c.field-meta.xml
<CustomField>
    <fullName>SHS_Gp_nr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>customer/vendor number (business partner number); key identifier</inlineHelpText>
    <label>Customer / Vendor Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>