force-app/main/default/objects/Account/fields/SHS_Ifa_nr__c.field-meta.xml
<CustomField>
    <fullName>SHS_Ifa_nr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>IfA-Number assigned by CMD</inlineHelpText>
    <label>IfA-Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>