force-app/main/default/objects/Account/fields/SHS_IFA_Per_Source_System__c.field-meta.xml
<CustomField>
    <fullName>SHS_IFA_Per_Source_System__c</fullName>
    <description>The IfA Number assigned to the account record in the source system at the time the data was exported and loaded into CLMA.  This field value is not actively subscribed with CMD from CLMA and may no longer be valid.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IFA Per Source System</label>
    <length>20</length>
    <type>Text</type>
</CustomField>