force-app/main/default/objects/Account/fields/SHS_Isic__c.field-meta.xml
<CustomField>
    <fullName>SHS_Isic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>System of United Nations Statistics Division for classifying all economic activities</inlineHelpText>
    <label>ISIC</label>
    <length>4</length>
    <type>Text</type>
</CustomField>