force-app/main/default/objects/Account/fields/SHS_Legacy_IFA_CP__c.field-meta.xml
<CustomField>
    <fullName>SHS_Legacy_IFA_CP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legacy IFA_CP</label>
    <length>40</length>
    <type>Text</type>
</CustomField>