force-app/main/default/objects/Account/fields/SHS_Legacy_IFA_Number__c.field-meta.xml
<CustomField>
    <fullName>SHS_Legacy_IFA_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legacy IFA Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>