force-app/main/default/objects/Account/fields/SHS_Legal_Hold__c.field-meta.xml
<CustomField>
    <fullName>SHS_Legal_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Hold</label>
    <type>Checkbox</type>
</CustomField>