force-app/main/default/objects/Account/fields/SHS_Legal_structure_code__c.field-meta.xml
<CustomField>
    <fullName>SHS_Legal_structure_code__c</fullName>
    <label>Legal Structure Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>29</fullName>
            </value>
            <value>
                <fullName>54</fullName>
            </value>
            <value>
                <fullName>55</fullName>
            </value>
            <value>
                <fullName>98</fullName>
            </value>
            <value>
                <fullName>GV</fullName>
            </value>
            <value>
                <fullName>NF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>