force-app/main/default/objects/Account/fields/SHS_Legal_structure_values__c.field-meta.xml
<CustomField>
    <fullName>SHS_Legal_structure_values__c</fullName>
    <label>Legal Structure Values</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SHS_Legal_structure_code__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Fed Govt, State</fullName>
            </value>
            <value>
                <fullName>Non-Fed Govt, County</fullName>
            </value>
            <value>
                <fullName>Non-Fed Govt, City</fullName>
            </value>
            <value>
                <fullName>Non-Fed, City/County</fullName>
            </value>
            <value>
                <fullName>NonFed HospDist/Auth</fullName>
            </value>
            <value>
                <fullName>Other Hospital</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>DX Distrib EndUser</fullName>
            </value>
            <value>
                <fullName>FSE Customer</fullName>
            </value>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>No Functional Loc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>