force-app/main/default/objects/Account/fields/SHS_Linked_CPID__c.field-meta.xml
<CustomField>
    <fullName>SHS_Linked_CPID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Linked CPID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>