force-app/main/default/objects/Account/fields/SHS_Name2__c.field-meta.xml
<CustomField>
    <fullName>SHS_Name2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name field 2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>