force-app/main/default/objects/Account/fields/SHS_Name_3__c.field-meta.xml
<CustomField>
    <fullName>SHS_Name_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>