force-app/main/default/objects/Account/fields/SHS_Name_alternative__c.field-meta.xml
<CustomField>
    <fullName>SHS_Name_alternative__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;External&apos;,SHS_Name1__c &amp;&apos; &apos;&amp; SHS_Name2__c &amp;&apos; &apos;&amp; SHS_Name3__c,
IF(RecordType.DeveloperName = &apos;Siemens_Healthineers&apos;,SHS_Short_name__c,
IF(RecordType.DeveloperName = &apos;Siemens&apos;,SHS_Short_name__c,
IF(RecordType.DeveloperName = &apos;P40_Account&apos;,SHS_Name1__c &amp;&apos; &apos;&amp; SHS_Name2__c &amp;&apos; &apos;&amp; SHS_Name3__c,NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name (alternative)</label>
    <type>Text</type>
</CustomField>