force-app/main/default/objects/Account/fields/SHS_Nat_id__c.field-meta.xml
<CustomField>
    <fullName>SHS_Nat_id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CRO (=business partner number)</inlineHelpText>
    <label>Nat ID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>