force-app/main/default/objects/Account/fields/SHS_Nielsen_Indicator__c.field-meta.xml
<CustomField>
    <fullName>SHS_Nielsen_Indicator__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nielsen Indicator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>