force-app/main/default/objects/Account/fields/SHS_Order_Block__c.field-meta.xml
<CustomField>
    <fullName>SHS_Order_Block__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Block/Central Order Block</label>
    <length>20</length>
    <type>Text</type>
</CustomField>