force-app/main/default/objects/Account/fields/SHS_Org_region__c.field-meta.xml
<CustomField>
    <fullName>SHS_Org_region__c</fullName>
    <label>SHS Org Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SHS_Org_zone__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>CHN</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>