force-app/main/default/objects/Account/fields/SHS_Org_zone__c.field-meta.xml
<CustomField>
    <fullName>SHS_Org_zone__c</fullName>
    <label>SHS Org Zone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SHS_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASN</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>CEECA</fullName>
            </value>
            <value>
                <fullName>CEET</fullName>
                <isActive>false</isActive>
                <label>CEET</label>
            </value>
            <value>
                <fullName>CHN</fullName>
            </value>
            <value>
                <fullName>CWE</fullName>
            </value>
            <value>
                <fullName>FBA</fullName>
                <isActive>false</isActive>
                <label>FBA</label>
            </value>
            <value>
                <fullName>FBL</fullName>
            </value>
            <value>
                <fullName>GBI</fullName>
            </value>
            <value>
                <fullName>IND</fullName>
            </value>
            <value>
                <fullName>JPN</fullName>
            </value>
            <value>
                <fullName>KOR</fullName>
            </value>
            <value>
                <fullName>LAM</fullName>
            </value>
            <value>
                <fullName>MEA</fullName>
            </value>
            <value>
                <fullName>MESA</fullName>
                <isActive>false</isActive>
                <label>MESA</label>
            </value>
            <value>
                <fullName>NAM</fullName>
            </value>
            <value>
                <fullName>NRB</fullName>
            </value>
            <value>
                <fullName>RCA</fullName>
                <isActive>false</isActive>
                <label>RCA</label>
            </value>
            <value>
                <fullName>SEU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>