force-app/main/default/objects/Account/fields/SHS_Other_UUIDs_with_External_System_Ref__c.field-meta.xml
<CustomField>
    <fullName>SHS_Other_UUIDs_with_External_System_Ref__c</fullName>
    <description>This field value represents unique account IDs generated by &quot;other&quot; internal  active or legacy systems from which the account record exists.  In CLMA, the value must always be prefaced by a 3-letter acronym and hyphen which represent the system which established the id, and include any/all leading zeroes (ex. &quot;P58-1000000536&quot; or &quot;P45-0010013589&quot;).  This field is intended to help users identify the accounts by allowing them to search CLMA for the system UUIDs with which they are most familiar.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other UUIDs with External System Ref</label>
    <type>TextArea</type>
</CustomField>