force-app/main/default/objects/Account/fields/SHS_Po_box__c.field-meta.xml
<CustomField>
    <fullName>SHS_Po_box__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CMD - Post Office Box</label>
    <length>10</length>
    <type>Text</type>
</CustomField>