force-app/main/default/objects/Account/fields/SHS_PO_box_city__c.field-meta.xml
<CustomField>
    <fullName>SHS_PO_box_city__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Box City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>