force-app/main/default/objects/Account/fields/SHS_Po_box_input__c.field-meta.xml
<CustomField>
    <fullName>SHS_Po_box_input__c</fullName>
    <description>Field where user can enter a value for the PO Box in situations where the CMD Rules for a country require an input for this attribute.  User creating the account record will fill this information in the Account Information Section, and then the value will be subject to being overwritten based on the value the CMD returns (so once a value returned in CMD Master section for &quot;SHS_Po_box__c&quot;.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>To be entered based on CMD Rules Alignment for Country.</inlineHelpText>
    <label>Post Office Box</label>
    <length>20</length>
    <type>Text</type>
</CustomField>