force-app/main/default/objects/Account/fields/SHS_PO_Box_postal_code__c.field-meta.xml
<CustomField>
    <fullName>SHS_PO_Box_postal_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Box postal code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>