force-app/main/default/objects/Account/fields/SHS_Postal_code__c.field-meta.xml
<CustomField>
    <fullName>SHS_Postal_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>