force-app/main/default/objects/Account/fields/SHS_Postal_code_of_city__c.field-meta.xml
<CustomField>
    <fullName>SHS_Postal_code_of_city__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postal code of city</label>
    <length>10</length>
    <type>Text</type>
</CustomField>