force-app/main/default/objects/Account/fields/SHS_Postal_code_pob__c.field-meta.xml
<CustomField>
    <fullName>SHS_Postal_code_pob__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postal Code of Post Office Box</label>
    <length>10</length>
    <type>Text</type>
</CustomField>