force-app/main/default/objects/Account/fields/SHS_Pricing_Block__c.field-meta.xml
<CustomField>
    <fullName>SHS_Pricing_Block__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pricing Block</label>
    <length>20</length>
    <type>Text</type>
</CustomField>