force-app/main/default/objects/Account/fields/SHS_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>SHS_Record_Type_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>