force-app/main/default/objects/Account/fields/SHS_Region_Old__c.field-meta.xml
<CustomField>
    <fullName>SHS_Region_Old__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region Old</label>
    <length>20</length>
    <type>Text</type>
</CustomField>