force-app/main/default/objects/Account/fields/SHS_Region_state_province__c.field-meta.xml
<CustomField>
    <fullName>SHS_Region_state_province__c</fullName>
    <label>Region (State/Province)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SHS_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AU-ACT</fullName>
                <label>Austr Capital Territ</label>
            </value>
            <value>
                <fullName>AU-NSW</fullName>
                <label>New South Wales</label>
            </value>
            <value>
                <fullName>AU-NT</fullName>
                <label>Northern Territory</label>
            </value>
            <value>
                <fullName>AU-QLD</fullName>
                <label>Queensland</label>
            </value>
            <value>
                <fullName>AU-SA</fullName>
                <label>South Australia</label>
            </value>
            <value>
                <fullName>AU-TAS</fullName>
                <label>Tasmania</label>
            </value>
            <value>
                <fullName>AU-VIC</fullName>
                <label>Victoria</label>
            </value>
            <value>
                <fullName>AU-WA</fullName>
                <label>Western Australia</label>
            </value>
            <value>
                <fullName>BR-AC</fullName>
                <label>Acre</label>
            </value>
            <value>
                <fullName>BR-AL</fullName>
                <label>Alagoas</label>
            </value>
            <value>
                <fullName>BR-AM</fullName>
                <label>Amazonas</label>
            </value>
            <value>
                <fullName>BR-AP</fullName>
                <label>Amapa</label>
            </value>
            <value>
                <fullName>BR-BA</fullName>
                <label>Bahia</label>
            </value>
            <value>
                <fullName>BR-CE</fullName>
                <label>Ceara</label>
            </value>
            <value>
                <fullName>BR-DF</fullName>
                <label>Distrito Federal, Brazil</label>
            </value>
            <value>
                <fullName>BR-ES</fullName>
                <label>Espirito Santo</label>
            </value>
            <value>
                <fullName>BR-GO</fullName>
                <label>Goias</label>
            </value>
            <value>
                <fullName>BR-MA</fullName>
                <label>Maranhao</label>
            </value>
            <value>
                <fullName>BR-MG</fullName>
                <label>Minas Gerais</label>
            </value>
            <value>
                <fullName>BR-MS</fullName>
                <label>Mato Grosso do Sul</label>
            </value>
            <value>
                <fullName>BR-MT</fullName>
                <label>Mato Grosso</label>
            </value>
            <value>
                <fullName>BR-PA</fullName>
                <label>Para</label>
            </value>
            <value>
                <fullName>BR-PB</fullName>
                <label>Paraiba</label>
            </value>
            <value>
                <fullName>BR-PE</fullName>
                <label>Pernambuco</label>
            </value>
            <value>
                <fullName>BR-PI</fullName>
                <label>Piaui</label>
            </value>
            <value>
                <fullName>BR-PR</fullName>
                <label>Parana</label>
            </value>
            <value>
                <fullName>BR-RJ</fullName>
                <label>Rio de Janeiro</label>
            </value>
            <value>
                <fullName>BR-RN</fullName>
                <label>Rio Grande do Norte</label>
            </value>
            <value>
                <fullName>BR-RO</fullName>
                <label>Rondonia</label>
            </value>
            <value>
                <fullName>BR-RR</fullName>
                <label>Roraima</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>