force-app/main/default/objects/Account/fields/SHS_Region_state_province_ref__c.field-meta.xml
<CustomField>
    <fullName>SHS_Region_state_province_ref__c</fullName>
    <formula>TEXT(SHS_Region_state_province__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region (State/Province) (reference)</label>
    <type>Text</type>
</CustomField>