force-app/main/default/objects/Account/fields/SHS_Registered_office__c.field-meta.xml
<CustomField>
    <fullName>SHS_Registered_office__c</fullName>
    <description>CISS Data</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Registered Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>