force-app/main/default/objects/Account/fields/SHS_Sales_dist_0200__c.field-meta.xml
<CustomField>
    <fullName>SHS_Sales_dist_0200__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Dist 0200</label>
    <length>255</length>
    <type>Text</type>
</CustomField>