force-app/main/default/objects/Account/fields/SHS_Sales_org1_0100__c.field-meta.xml
<CustomField>
    <fullName>SHS_Sales_org1_0100__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Org1 0100</label>
    <length>255</length>
    <type>Text</type>
</CustomField>