force-app/main/default/objects/Account/fields/SHS_Sales_org3_0300__c.field-meta.xml
<CustomField>
    <fullName>SHS_Sales_org3_0300__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Org3 0300</label>
    <length>255</length>
    <type>Text</type>
</CustomField>