force-app/main/default/objects/Account/fields/SHS_Sales_region_name__c.field-meta.xml
<CustomField>
    <fullName>SHS_Sales_region_name__c</fullName>
    <label>Sales Region Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SHS_Sales_dist_0100__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Northeast Zone</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Philadelphia Old</fullName>
            </value>
            <value>
                <fullName>EM East Old</fullName>
            </value>
            <value>
                <fullName>Boston Old</fullName>
            </value>
            <value>
                <fullName>HS Eastern PA Old</fullName>
            </value>
            <value>
                <fullName>New York Metro</fullName>
            </value>
            <value>
                <fullName>Upstate NY / NJ</fullName>
            </value>
            <value>
                <fullName>Southeast Zone</fullName>
            </value>
            <value>
                <fullName>SE Coastal HS</fullName>
            </value>
            <value>
                <fullName>Carolinas Old</fullName>
            </value>
            <value>
                <fullName>Atlanta Old</fullName>
            </value>
            <value>
                <fullName>Florida Old</fullName>
            </value>
            <value>
                <fullName>Med Lab</fullName>
            </value>
            <value>
                <fullName>Piedmont</fullName>
            </value>
            <value>
                <fullName>Washington DC</fullName>
            </value>
            <value>
                <fullName>Chesapeake HS</fullName>
            </value>
            <value>
                <fullName>Heartland HS</fullName>
            </value>
            <value>
                <fullName>Central Zone</fullName>
            </value>
            <value>
                <fullName>Washington DC Old</fullName>
            </value>
            <value>
                <fullName>Detroit Old</fullName>
            </value>
            <value>
                <fullName>Pittsburgh Old</fullName>
            </value>
            <value>
                <fullName>Columbus Old</fullName>
            </value>
            <value>
                <fullName>Nashville Old</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Great Lakes HS</fullName>
            </value>
            <value>
                <fullName>Keystone Old</fullName>
            </value>
            <value>
                <fullName>Allegheny Valley HS</fullName>
            </value>
            <value>
                <fullName>Midwest Zone</fullName>
            </value>
            <value>
                <fullName>Cassling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>